--- a/src/pages/event-details/event-details.html
+++ b/src/pages/event-details/event-details.html
@@ -8,5 +8,8 @@
 
 
 <ion-content padding>
-
+  <p style="margin-top: 30px;" text-center>Date</p>
+  <h2 text-center>9th & 10th June 2017</h2>
+  <p style="margin-top: 30px;" text-center>Location</p>
+  <h2 text-center>Cooper Design Space<br>860 S. Los Angeles St<br>Los Angeles, CA 90014</h2>
 </ion-content>
