--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -2,9 +2,10 @@
 
   <h1>Introduction</h1>
   
-  <p>Welcome to glimpses 2017!</p>
-  <p>An exploration of creativity and human potential.</p>
-  <p>This app is designed to give you all of the information you will need during your time here.</p>
+  <p>Welcome to glimpses 2017!<br>
+  An exploration of creativity and human potential.</p>
+  <p>This app is designed to enhance your experience at Glimpses and please take the time to register, 
+  it will make youre time in LA more fun and productive.</p>
   <p>Please follow the steps to start creating your glimpses 2017 experience.</p>
 
 </ion-content>
