--- a/src/pages/question/question.html
+++ b/src/pages/question/question.html
@@ -1,5 +1,5 @@
 <ion-content padding>
-  <h1>How can we reach maximum human potential?</h1>
+  <h1>How do we maximise human potential?</h1>
 
   <ion-item>
     <ion-label floating>{{150 - answer.length}} characters remaining</ion-label>
