--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the Schedule page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="secondary">
@@ -14,5 +8,29 @@
 
 
 <ion-content padding>
+
+<ion-list>
+    <ion-item-divider text-center color="dark">Friday</ion-item-divider>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+</ion-list>
+
+<ion-list>
+    <ion-item-divider text-center color="dark">Saturday</ion-item-divider>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+</ion-list>
+
+<ion-list>
+    <ion-item-divider text-center color="dark">Sunday</ion-item-divider>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+    <ion-item><ion-label>0900</ion-label><div item-right>Breakfast</div></ion-item>
+</ion-list>
 
 </ion-content>
